Add Elasticsearch, database scaling, WAL and consistent hashing notes
New notes:
- elasticsearch/elasticsearch-from-scratch.md — fundamentals through Query DSL,
  bool clauses, relevance/BM25, aggregations, CRUD and a debugging checklist
- system-design/database-sharding-partitioning-replication.md — replication vs
  sharding vs vertical partitioning, shard-key choice, the six sharding
  techniques, and a worked example sharding a 1.2 TB order service
- system-design/write-ahead-log.md — the WAL rule, fsync, checkpoints, ARIES
  recovery, and Redis AOF mapped onto it
- system-design/consistent-hashing.md — the ring, virtual nodes, preference
  lists, and when a fixed partition count is the better choice
- java/java-concurrency.md, java/java-memory-model-happens-before.md,
  java/java-serialization.md
- system-design/blobs-and-large-object-storage.md

Also: cross-reference backlinks between related notes, README index updated and
re-sorted, and three project conventions recorded in CLAUDE.md — Kotlin rather
than Java for illustrative snippets, bare concept names as cross-reference link
text, and complete runnable query bodies instead of bare fragments.